change notification prioryty & Activity not visible

--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -2,47 +2,80 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:padding="10dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_weight="1"
-            android:id="@+id/notiText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:textSize="40sp"/>
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/notiExit"
-            android:layout_width="0px"
-            android:layout_height="80px"
-            android:scaleType="fitXY"/>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
+        <!--<TextView-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/notiText"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:textSize="40sp"/>-->
+        <!--<ImageView-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/notiExit"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="80px"-->
+            <!--android:scaleType="fitXY"/>-->
 
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/notiReset"
-            android:layout_width="0px"
-            android:layout_height="128px"
-            android:layout_marginTop="5dp"
-            android:scaleType="fitXY"/>
+        <!--<ImageView-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/notiReset"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="128px"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:scaleType="fitXY"/>-->
 
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/notiShare"
-            android:layout_width="0px"
-            android:layout_height="128px"
-            android:layout_marginTop="5dp"
-            android:scaleType="fitXY"/>
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/notigallary"
-            android:layout_width="0px"
-            android:layout_height="128px"
-            android:layout_marginTop="5dp"
-            android:scaleType="fitXY"/>
+        <!--<ImageView-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/notiShare"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="128px"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:scaleType="fitXY"/>-->
+        <!--<ImageView-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/notigallary"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="128px"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:scaleType="fitXY"/>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
+    <TextView
+        android:id="@+id/noti_capture_count_text"
+        android:layout_width="@android:dimen/notification_large_icon_width"
+        android:layout_height="@android:dimen/notification_large_icon_height"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:text="1장"/>
+
+    <ImageView
+        android:id="@+id/noti_close_image"
+        android:layout_width="48px"
+        android:layout_height="48px"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:scaleType="fitXY"/>
+
+    <ImageView
+        android:id="@+id/noti_save_image"
+        android:layout_marginRight="30dp"
+        android:layout_width="96px"
+        android:layout_height="96px"
+        android:layout_toLeftOf="@+id/noti_delete_image"
+        android:scaleType="fitXY"/>
+
+
+    <ImageView
+        android:id="@+id/noti_delete_image"
+        android:layout_marginRight="30dp"
+        android:layout_width="96px"
+        android:layout_height="96px"
+        android:layout_toLeftOf="@id/noti_close_image"
+        android:scaleType="fitXY"/>
+
 </RelativeLayout>
