--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,21 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="notification_right_margin">5dp</dimen>
+    <dimen name="notification_top_margin">7dp</dimen>
+
+    <dimen name="notification_title_text_size">17sp</dimen>
+    <dimen name="notification_action_text_size">16sp</dimen>
+
+    <dimen name="notification_dimen_text_margin_right">13dp</dimen>
+    <dimen name="notification_dimen_text_margin_left">13sp</dimen>
+    <dimen name="notification_dimen_action_text_margin_right">5dp</dimen>
+
+    <dimen name="notification_grid_width">60dp</dimen>
+    <dimen name="notification_grid_height">60dp</dimen>
+
+    <dimen name="notification_grid_exit_width">100px</dimen>
+    <dimen name="notification_grid_exit_height">100px</dimen>
+    <dimen name="notification_grid_exit_margin">5dp</dimen>
 </resources>
